# minisweeper

./: CMakeLists.txt  Makefile  README.md
src/: main.cpp
